--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+	margin-left: auto;
+	width: 100%;
+}
+
 .App-header {
 	text-align: center;
 	background-color: #222;
@@ -6,12 +14,9 @@
 	color: white;
 }
 
-.App-content { 
-	display: table; margin-left: auto; margin-right: auto;
-}
-
 .App-title {
 	padding: 5px;
+	font-size: 1.5em;
 }
 
 #search-input {
@@ -26,7 +31,41 @@
 	padding: 5px;
 }
 
-.App-title {
-	font-size: 1.5em;
+#Nasa-param {
+	text-align: center;
+	margin-top: 10px;
 }
 
+.card {
+	height: 520px;
+}
+
+.card-img-top{
+	height: 300px;
+}
+
+.card-title{
+	display: inline;
+}
+
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
